# optional-lite

./: CMakeLists.txt
include/nonstd/: optional.hpp
